HEAD
    + Stop properly the execution or creation if an error is found in the
      custom pre/post installation scripts
    + Do not assign IP address to internal network bridges
    + Use VirtIO for network cards instead of e1000 in libvirt configuration
    + Use VirtIO instead of emulated IDE disks in libvirt configuration
    + Install packages always non-interactive and do not install recommends
    + Autoconnect with anste-connect if there is only one deployed host
    + Adding support to post tests scripts defined in the images
    + Added partial support for images definition in YAML
    + Unhardcode the nameserver used in the setup of the hosts
    + Passwordless and direct root login with anste-connect
    + Changing the kernel flavour from virtual to generic to allow
      nested virtualization
    + Change default images path to /var/tmp/anste-images
    + Fixed support for files in the scenarios defined in yaml
    + Changed the script that configured a host to be a dhcp-router
    + Allowing empty variables in the scenarios tests
    + Adding support to set the mirror from the image xml definition
    + Moving the mirror option to a new section
    + Deleted suppot for Xen and moved the mirror option to global section
    + Allow to specify architecture of base images
    + Added support for 64bit machines
    + Added in the config file the nameserver used in the setup script
    + Added support to the message directive in xml output report
    + Fixed support in yaml for the hw-addr directive that was broken
    + Fixed support in yaml for the bridges and manual-bridging directives
    + Properly write /etc/resolv.conf file in the setup script
    + Added retries to the mount image section when deploying an scenario
    + Fixed wrong error handling when base image does not exist
    + Added localdomain hostnames to /etc/hosts
    + Description attribute in tests is now optional
    + suites.list files can now contain comments and blank lines