@@ -386,6 +386,7 @@ sub _runTest # (test)
 
     # Store start time
     $testResult->setStartTime($self->_time());
+    my $initialTime = time();
 
     # Create a temp directory for this test
     my $newPath = tempdir(CLEANUP => 1)
@@ -472,6 +473,7 @@ sub _runTest # (test)
         # Store end time
         my $endTime = $self->_time();
         $testResult->setEndTime($endTime);
+        $testResult->setDuration((time() - $initialTime) / 1000.0);
         $testResult->setLog("$suiteDir/$name.html");
     } elsif ($test->type() eq 'reboot') {
         $ret = $self->_reboot($hostname);
