@@ -1,4 +1,5 @@
 HEAD
+    + Added duration of each executed tests in JUnit report
     + Stop properly the execution or creation if an error is found in the
       custom pre/post installation scripts
     + Do not assign IP address to internal network bridges
